ingress/kk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kk-ingress
  namespace: kk-test
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - "testkk.iamkishorekumar.in"
    secretName: testkksecret-tls
  rules:
  - host: "testkk.iamkishorekumar.in"
    http:
      paths:
      - backend:
          service:
            name: my-loadbalancer-service
            port:
              number: 80
        path: "/"
        pathType: Prefix
